# dag

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dag/: __init__.py  core.py  decorators.py  exceptions.py  flags.py  model.py  parser.py  state.py
dag/ui/: __init__.py  app.py  bindings.py  widgets.py
examples/: calculator.py  option_pricer.py  option_pricer_web.py
tests/: __init__.py  test_basic.py  test_concurrency.py  test_cycles.py  test_deps.py  test_edge_cases.py  test_inverse.py  test_option_pricer.py  test_parameterized.py  test_registry.py  test_state.py  test_ui_bindings.py  test_untracked.py  test_watch.py
