[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dag-framework"
version = "0.1.0"
description = "DAG-based dependency tracking and memoization framework for Python"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Abhishek Gulati"}
]
keywords = [
    "dag",
    "dependency",
    "memoization",
    "reactive",
    "caching",
    "functional",
    "finance",
    "quantitative",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/beeblebroxz/dag"
Repository = "https://github.com/beeblebroxz/dag"
Issues = "https://github.com/beeblebroxz/dag/issues"

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
files = ["dag/core.py", "dag/decorators.py", "dag/state.py"]
check_untyped_defs = true
warn_unused_configs = true
